# silco

./: .gitignore  README.md  TASKS.md  index.html  normalize.html  package.json  pnpm-lock.yaml  tsconfig.json
CSS/: editor.css  general.css  hotkeys.css  noise.css  normalize.css  panels.css
JS/: NN.js  general.js  hotkeys.js  math.js  noise.js  panels.js
SCSS/: editor.scss  terminal.scss  tokens-rust.scss
TS/: editor.ts  general.ts  hotkeys.ts  main.ts  noise.ts  panels.ts  terminal.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
