[package]
name = "silco"
version = "1.0.0"
description = "A text editor 📜"
authors = ["AuracleTech"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.*", features = [] }

[dependencies]
tauri = { version = "1.*", features = [ "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jayce = { version = "9.*", features = ["serialization"] }
regex = "1.*"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
